--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: "Thoughts and Musings"
+title: "Thoughts"
 author: "Joseph Yoon"
-description: "Some short description." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+description: "Description." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
@@ -39,4 +39,4 @@ defaults:
       path: ""
       type: post
     values:
-      tags: Other
+      tags: Thoughts
