--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ instagram_username: jsphyn
 #########################################################################################
 ######### Nothing below needs to be changed (unless you know what you're doing) #########
 #########################################################################################
-theme: jekyll-theme-minimal
+theme: "minima"
 
 rss: rss
 
@@ -29,7 +29,6 @@ kramdown:
 plugins:
   - jekyll-feed
   - jekyll-sitemap
-  - jekyll-remote-theme
 
 titles_from_headings:
   strip_title: true
